# murahdahla

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  example.service  example_group.yaml
.github/workflows/: check.yml
migrations/2019-10-03-053227_async/: down.sql  up.sql
migrations/2019-10-06-181906_use_datetime/: down.sql  up.sql
migrations/2019-10-18-200610_submission_datetime/: down.sql  up.sql
migrations/2020-08-24-215423_smz3_hotfix/: down.sql  up.sql
migrations/2020-08-24-215423_smz3_hotfix/src/: schema.rs
migrations/2020-11-18-010231_multi_server/: down.sql  up.sql
migrations/2022-07-18-220704_fix_submission/: down.sql  up.sql
src/: db.rs  discord.rs  error.rs  helpers.rs  main.rs  schema.rs  z3r.rs
src/discord/: channel_groups.rs  commands.rs  messages.rs  mod.rs  servers.rs  submissions.rs
src/games/: mod.rs  other.rs  save_parsing.rs  smtotal.rs  smvaria.rs  smz3.rs  z3r.rs
