[package]
name = "murahdahla"
version = "0.3.2"
authors = ["cassidoxa <cassidymoen@gmx.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
byteorder = "1.3"
chrono = "0.4"
dotenv = "0.15"
env_logger = "0.8"
futures = "0.3.8"
log = "0.4"
scraper = "0.12.0"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
url = "2.2"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dependencies.diesel]
version = "1.4.5"
default-features = false
features = ["mysql", "chrono", "r2d2"]

[dependencies.reqwest]
version = "0.10"
default-features = false
features = ["rustls-tls", "json", "gzip"]

[dependencies.serenity]
version = "0.9.2"
features = ["cache", "standard_framework", "rustls_backend"]

[dependencies.tokio]
version = "0.2"
default-features = false
features = ["macros"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
overflow-checks = false
debug-assertions = false
codegen-units = 1
panic = "abort"
