[package]
name = "murahdahla"
version = "0.3.5"
authors = ["cassidoxa <cassidymoen@gmx.com>"]
edition = "2021"
rust-version = "1.60"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
byteorder = "1.4.3"
chrono = "0.4"
dotenv = "0.15"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
once_cell = "1.13.0"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
url = "2.2"
uuid = { version = "1.1", features = ["serde", "v4"] }

[dependencies.diesel]
version = "1.4"
default-features = false
features = ["mysql", "chrono", "r2d2"]

[dependencies.reqwest]
version = "0.11.11"
default-features = false
features = ["rustls-tls", "json", "gzip"]

[dependencies.serenity]
version = "0.11.5"
features = ["builder", "cache", "standard_framework", "rustls_backend", "http"]

[dependencies.tokio]
version = "1.24"
default-features = false
features = ["macros", "rt-multi-thread"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
overflow-checks = false
debug-assertions = false
codegen-units = 1
panic = "abort"
